derive/test/compile_fail/record_as_seq_incomplete_labels.stderr
error: unsupported attribute `label` on struct field
 --> compile_fail/record_as_seq_incomplete_labels.rs:6:12
  |
6 |     #[sval(label = "a")]
  |            ^^^^^
